--- a/index.html
+++ b/index.html
@@ -4213,6 +4213,40 @@ window.Quarto = {
 </section>
 <section id="section-5.2.-finding-theoretical-probabilities" class="level2">
 <h2 class="anchored" data-anchor-id="section-5.2.-finding-theoretical-probabilities">Section 5.2. Finding Theoretical Probabilities</h2>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+<span class="screen-reader-only">Note</span>Goals
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<ul>
+<li>Find the theoretical probabilities of <span style="color:red"><strong>equally likely outcomes</strong>.</span></li>
+<li>Find the probability of the <span style="color:red"><strong>outcome</strong></span> of an event.</li>
+<li>Use basic probability laws.</li>
+</ul>
+</div>
+</div>
+<div class="callout callout-style-default callout-note no-icon callout-titled">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+<span class="screen-reader-only">Note</span>Events
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<ul>
+<li>An <em>event</em> is a set of <span style="color:red"><strong>outcome</strong></span> of an experiment to which a probability is assigned.</li>
+<li>We use uppercase Latin letters to denote events.</li>
+<li>The probability of an event <span class="math inline">\(A\)</span> is denoted by <span style="color:red"><span class="math inline">\(P(A)\)</span></span>.</li>
+</ul>
+</div>
+</div>
 
 
 </section>
